--- a/usersnap.info.yml
+++ b/usersnap.info.yml
@@ -1,5 +1,6 @@
-name = Usersnap
-description = Integrates Usersnap feedback widget with Drupal.
-core = 7.x
-configure = admin/config/services/usersnap
-php = 5.3
+name: Usersnap
+description: Integrates Usersnap feedback widget with Drupal.
+type: module
+core: 8.x
+configure: usersnap.admin_settings
+
